# FleetCare

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.ghcr.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_service_next_terms.py
backend/app/: config.py  database.py  dependencies.py  main.py  ratelimit.py  security.py  seed.py
backend/app/models/: __init__.py  car.py  document.py  expense.py  fuel.py  notification.py  odometer.py  service.py  settings.py  tire.py  user.py
backend/app/routers/: __init__.py  _serializers.py  auth.py  cars.py  dashboard.py  documents.py  expenses.py  fuel.py  health.py  notifications.py  odometer.py  services.py  settings.py  tires.py  users.py
backend/app/schemas/: auth.py  car.py  common.py  dashboard.py  document.py  expense.py  fuel.py  notification.py  odometer.py  service.py  settings.py  tire.py  user.py
backend/app/services/: __init__.py  auth_service.py  dashboard_service.py  email_service.py  fuel_service.py  matrix_service.py  notification_service.py  projection_service.py  settings_service.py
backend/app/templates/: _base.j2  expiring_document.en.j2  expiring_document.sk.j2  overdue_document.en.j2  overdue_document.sk.j2  service_due.en.j2  service_due.sk.j2  tire_projection.en.j2  tire_projection.sk.j2
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_cars.py  test_fuel_service.py  test_health.py  test_notification_dedup.py  test_projection_service.py  test_security.py  test_tires.py  test_v02_backend.py
docs/: API_CONTRACT.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  SDLC_PLAN.md  TECHNICAL_SPECIFICATION.md  (+1 more)
(+120 files in other folders)
