[project]
name = "fleetcare-backend"
version = "0.1.0"
description = "FleetCare backend API (FastAPI + SQLAlchemy async + Celery)."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear (likely real bugs)
]
ignore = [
    "E501",  # long lines are acceptable in this codebase
    "B008",  # function calls in argument defaults (FastAPI Depends/Query)
]

[tool.ruff.lint.per-file-ignores]
"app/models/*" = ["F821"]  # forward refs under TYPE_CHECKING

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]
